--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,16 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".LogIn">
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/btn_facebook_login"
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/login_text"
+        android:layout_gravity="center_horizontal"
+        android:text="Please Log In"/>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/get_start"
+    <Button
+        android:id="@+id/btn_custom_login"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="long in with facebook" />
+    <Button
+        android:id="@+id/btn_custom_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="log out" />
+
+    <Button
+        android:id="@+id/btn_custom_go"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Started"
+        />
 
 </LinearLayout>
