--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -20,7 +20,7 @@
         android:id="@+id/btn_custom_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="long in with facebook" />
+        android:text="log in with facebook" />
     <Button
         android:id="@+id/btn_custom_logout"
         android:layout_width="wrap_content"
