--- a/app/src/main/res/layout/page1fragment.xml
+++ b/app/src/main/res/layout/page1fragment.xml
@@ -7,11 +7,13 @@
     android:background="#FFFFFF"
     android:paddingTop="42dp"
     android:orientation="vertical">
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider = "#EFEEEA"
+        android:textFilterEnabled="true"
         android:dividerHeight="2px">
     </ListView>
 
