--- a/app/src/main/res/layout/addimage_activity.xml
+++ b/app/src/main/res/layout/addimage_activity.xml
@@ -23,10 +23,17 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="85dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="30dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
+
+        <ListView
+            android:id="@+id/choose_subjects_List"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:choiceMode="multipleChoice">
+        </ListView>
 
         <EditText
             android:id="@+id/et1"
@@ -38,10 +45,10 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="25dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="430dp"
+            android:layout_marginTop="500dp"
             android:layout_marginEnd="25dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="120dp"
+            android:layout_marginBottom="100dp"
             android:layout_weight="1"
             android:backgroundTint="#FFFFFF"
             android:hint="Write description"
