--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -9,15 +9,46 @@
     android:layout_marginBottom="8dp"
     android:background="@android:color/white">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/names"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:includeFontPadding="false"
+            android:text="names"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:includeFontPadding="false"
+            android:text="Tagged"
+            android:textColor="@android:color/black"
+            android:textSize="15dp" />
+
+
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/posted_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="5dp"
         android:includeFontPadding="false"
-        android:text="TITLE"
-        android:textSize="15sp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"/>
+        android:text="Time"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="13dp" />
 
 
     <ImageView
@@ -30,9 +61,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
         android:includeFontPadding="false"
         android:text="content"
-        android:textSize="13sp"
-        android:textColor="@android:color/darker_gray"/>
+        android:textColor="@android:color/darker_gray"
+        android:textSize="15dp" />
 
 </LinearLayout>
