--- a/app/src/main/res/layout/addimage_activity.xml
+++ b/app/src/main/res/layout/addimage_activity.xml
@@ -22,9 +22,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
 
@@ -32,8 +32,13 @@
             android:id="@+id/choose_subjects_List"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:choiceMode="multipleChoice">
-        </ListView>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="350dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="180dp"
+            android:choiceMode="multipleChoice"></ListView>
 
         <EditText
             android:id="@+id/et1"
@@ -45,7 +50,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="25dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="530dp"
             android:layout_marginEnd="25dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="100dp"
