--- a/app/src/main/res/layout/page2fragment.xml
+++ b/app/src/main/res/layout/page2fragment.xml
@@ -10,12 +10,12 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"
-        android:paddingTop="48dp"
-        android:background="#F0F0F0"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#F0F0F0"
+            android:paddingTop="48dp" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <ImageButton
