--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -9,63 +9,119 @@
     android:layout_marginBottom="8dp"
     android:background="@android:color/white">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/names"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/myprofile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:includeFontPadding="false"
-            android:text="names"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="17dp"
-            android:textStyle="bold" />
+            android:src="@drawable/iconuser"></ImageView>
 
-        <TextView
-            android:id="@+id/textView1"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:includeFontPadding="false"
-            android:text="Tagged"
-            android:textColor="@android:color/black"
-            android:textSize="15dp" />
+            android:layout_gravity="right|center_vertical"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp">
+
+                <TextView
+                    android:id="@+id/posted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:includeFontPadding="false"
+                    android:text="Posted by"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="13dp" />
+
+                <TextView
+                    android:id="@+id/names"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:includeFontPadding="false"
+                    android:text="names"
+                    android:textColor="#6C6666"
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp">
+
+                <TextView
+                    android:id="@+id/inthisphoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:includeFontPadding="false"
+                    android:text="In This Photo"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="13dp" />
+
+                <TextView
+                    android:id="@+id/names2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:includeFontPadding="false"
+                    android:text="names"
+                    android:textColor="#837A7A"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/posted_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_margin="5dp"
+        android:layout_margin="7dp"
         android:includeFontPadding="false"
         android:text="Time"
         android:textColor="@android:color/darker_gray"
         android:textSize="13dp" />
-
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
         android:includeFontPadding="false"
         android:text="content"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="#878181"
         android:textSize="15dp" />
 
 </LinearLayout>
