--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -116,12 +116,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_margin="5dp"
         android:includeFontPadding="false"
         android:text="content"
         android:textColor="#878181"
+        android:background="#F3F3F3"
         android:textSize="15dp" />
 
 </LinearLayout>
