--- a/app/src/main/res/layout/page2fragment.xml
+++ b/app/src/main/res/layout/page2fragment.xml
@@ -8,7 +8,9 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:id = "@+id/swipe_layout"
+        >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
