grid view scroll

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -118,11 +118,12 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="4dp"
+        android:padding="8dp"
         android:includeFontPadding="false"
         android:text="content"
         android:textColor="#878181"
-        android:background="#F3F3F3"
+        android:background="#F8F8F8"
         android:textSize="15dp" />
 
 </LinearLayout>
