--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,5 +15,7 @@
 
         <item name="android:windowFullscreen">true</item>
     </style>
+    <style name = "MyDialogTheme" parent = "Theme.AppCompat.Light.Dialog.Alert">
+    </style>
 
 </resources>
