--- a/app/src/main/res/layout/addimage_activity.xml
+++ b/app/src/main/res/layout/addimage_activity.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/content_main"
@@ -14,9 +12,8 @@
         android:padding="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/select_photo"
             android:layout_width="315dp"
             android:layout_height="315dp"
             android:layout_alignParentStart="true"
@@ -26,19 +23,19 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop" />
+            android:src = "@drawable/select_photo"
+            android:scaleType="fitCenter" />
 
         <ListView
             android:id="@+id/choose_subjects_List"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="350dp"
             android:layout_marginRight="25dp"
-            android:layout_marginBottom="180dp"
-            android:choiceMode="multipleChoice"></ListView>
+            android:choiceMode="multipleChoice"
+            android:textColor="#39280F"></ListView>
 
         <EditText
             android:id="@+id/et1"
@@ -47,15 +44,14 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="25dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="530dp"
+            android:layout_marginTop="510dp"
             android:layout_marginEnd="25dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="100dp"
             android:layout_weight="1"
             android:backgroundTint="#FFFFFF"
+            android:gravity="top"
             android:hint="Write description"
             android:textColor="#000"
             android:textColorHint="#C1C1C1"
@@ -63,22 +59,16 @@
 
     </RelativeLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_launcher_background" />
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <Button
         android:id="@+id/fabUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
+        android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        android:background="@android:color/transparent"
+        android:text="Share"
+        android:textColor="#402B0C"
+        android:textSize="16dp" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
