--- a/app/src/main/res/layout/editprofile.xml
+++ b/app/src/main/res/layout/editprofile.xml
@@ -19,13 +19,15 @@
             android:layout_marginBottom="40dp"
             android:src="@drawable/iconuser"></ImageView>
 
-        <Button
+        <ImageButton
             android:id="@+id/profile_btn"
-            android:layout_width="40dp"
+            android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="right"
             android:layout_marginTop="160dp"
-            android:text="/" />
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/camera" />
 
     </FrameLayout>
 
@@ -132,19 +134,26 @@
 
     </LinearLayout>
 
-    <GridView
-        android:id="@+id/myposting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:numColumns="4"></GridView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <GridView
+            android:id="@+id/myposting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:numColumns="4"></GridView>
 
-    <Button
-        android:id = "@+id/saveButton"
-        android:gravity="bottom"
-        android:layout_height="50dp"
-        android:layout_width="50dp"
-        android:src="@drawable/ic_launcher_foreground">
-    </Button>
+        <ImageButton
+            android:id="@+id/saveButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|left"
+            android:layout_margin="25dp"
+            android:background="@android:color/transparent"
+            android:gravity="bottom"
+            android:scaleType="fitCenter"
+            android:src="@drawable/edit_profile"></ImageButton>
+    </FrameLayout>
 
 </LinearLayout>
