--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,29 +4,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.week2.MainActivity">
-
-    <Button
-        android:id="@+id/newplaylist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/home_webview"
-        android:layout_marginBottom="5dp" />
-
-    <Button
-        android:id="@+id/showplaylist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/home_webview"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp" />
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <WebView
         android:id="@+id/home_webview"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="42dp" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:src="@drawable/hello"></ImageView>
+
+    <ImageButton
+        android:id="@+id/newplaylist"
+        android:layout_width="80dp"
+        android:layout_height="32dp"
+        android:layout_above="@+id/home_webview"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="9dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/add_song" />
+
+    <ImageButton
+        android:id="@+id/showplaylist"
+        android:layout_width="80dp"
+        android:layout_height="32dp"
+        android:layout_above="@+id/home_webview"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|right"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="9dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/stoarge" />
+
+</FrameLayout>
 </RelativeLayout>
