--- a/app/src/main/res/layout/page2fragment.xml
+++ b/app/src/main/res/layout/page2fragment.xml
@@ -20,15 +20,15 @@
             android:paddingTop="48dp" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <ImageButton
         android:id="@+id/addImageButton"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_gravity="bottom|right"
-        android:layout_margin="12dp"
+        android:layout_margin="10dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_launcher_background" />
-
-
+        android:scaleType="fitCenter"
+        android:src="@drawable/posting_upload"/>
 
 </FrameLayout>
