--- a/app/src/main/res/layout/cdimage.xml
+++ b/app/src/main/res/layout/cdimage.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fl">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/youtubeimage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <FrameLayout
+        android:id="@+id/fl"
         android:layout_gravity="center"
-        android:src="@drawable/white_circle"></ImageView>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/smallcircle"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        <ImageView
+            android:id="@+id/youtubeimage"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/white_circle"></ImageView>
+
+        <ImageView
+            android:id="@+id/smallcircle"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@drawable/white_circle"></ImageView>
+
+    </FrameLayout>
+<!--
+    <TextView
+        android:id="@+id/cdtime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:src="@drawable/white_circle"></ImageView>
-
-
-</FrameLayout>
+        android:text="Time"
+        android:layout_marginTop="10dp"
+        android:textColor="#595751"
+        android:textSize="16dp"></TextView>
+-->
+</LinearLayout>
