--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:layout_marginTop="42dp" />
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="3dp" />
 
     <ImageView
         android:layout_width="match_parent"
