--- a/app/src/main/res/layout/new_playlist_dialog.xml
+++ b/app/src/main/res/layout/new_playlist_dialog.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_gravity="center">
 
         <EditText
@@ -18,7 +19,20 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:backgroundTint="#856523"
-            android:hint="Write description here"
+            android:hint="The mood for your day"
+            android:textColor="#000"
+            android:textColorHint="#C1C1C1"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/et2"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:backgroundTint="#856523"
+            android:hint="Write anything to memorize today"
             android:textColor="#000"
             android:textColorHint="#C1C1C1"
             android:textSize="15sp" />
